# dodokwon

./: .gitignore  Cargo.toml  README.md  build-crowd-sale.sh  build-cw20.sh
contracts/crowd-sale/: Cargo.toml
contracts/crowd-sale/schema/: crowd-sale.json
contracts/crowd-sale/schema/raw/: execute.json  instantiate.json  query.json  response_to_burned_uluna.json  response_to_cw20_address.json  response_to_maximum_mintable_amount.json  response_to_mintable_block_height.json  response_to_owner.json  response_to_udodokwan_per_uusd.json  response_to_udodokwan_to_uluna.json
contracts/crowd-sale/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/cw20-base/: Cargo.toml
contracts/cw20-base/schema/: cw20-token.json
contracts/cw20-base/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/foundation/: Cargo.toml
contracts/foundation/schema/: foundation.json
contracts/foundation/schema/raw/: execute.json  instantiate.json  query.json  response_to_proposal.json  response_to_reverse_proposals.json
contracts/foundation/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
scripts/: 01-store-all-contracts.sh  02-instantiate-contracts.sh  03-transfer-and-update-minter.sh  04-try-query-and-execute.sh
scripts/contract-addresses/: crowd-sale-address.txt  cw20-base-address.txt  foundation-address.txt
scripts/store/: crowd-sale-store-data.json  crowd_sale_data.json  cw20-base-store-data.json  foundation-store-data.json
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
