[package]
name = "crowd-sale"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "0.13.4"
thiserror = "1"
schemars = "0.8.1"
cw-utils = "0.13"
cosmwasm-schema = "1.0.4" 
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = { version = "1.0.1", features = ["library"] }

terra-bindings = { git = "https://github.com/classic-terra/terra-bindings", branch = "main" }

[dev-dependencies]
anyhow = "1.0.71"
cw-multi-test = "0.13.4"
