[package]
name = "foundation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "1.0.1"
thiserror = "1"
schemars = "0.8.1"
cw-utils = "1.0.1"
cosmwasm-schema = "1.0.4"
cw20="1.0.1" 
cw3 = "1.0.1"
cw3-fixed-multisig = { version = "1.0.1", features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.13.4"
